# rh-mgr

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: deploy-docs.yml  release.yml  test.yml
docs/: index.md  roadmap.md
docs/.vitepress/: config.mts
docs/developer/: architecture.md  building.md  setup.md
docs/guide/: discovery.md  getting-started.md  installation.md  introduction.md  library.md  tracking.md  troubleshooting.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  db.rs  lib.rs  state.rs
src-tauri/src/api/: mod.rs  smwc.rs
src-tauri/src/commands/: completions.rs  launcher.rs  library.rs  logs.rs  mod.rs  onboarding.rs  patch.rs  sync.rs
src-tauri/src/domain/: mod.rs  rom.rs
src-tauri/src/patching/: mod.rs
src-tauri/src/tracking/: commands.rs  mod.rs  service.rs  smw.rs  usb2snes.rs
src/components/: CompletionBadge.test.tsx  CompletionBadge.tsx  DeleteHackDialog.tsx  FilterSidebar.tsx  HackDetailWrapper.tsx  LogViewer.tsx  Pagination.test.tsx  Pagination.tsx  SearchAndSort.test.tsx  SearchAndSort.tsx  SearchWithAutocomplete.tsx  SyncProgress.tsx  TrackingStatus.tsx
src/hooks/: useCleanRom.ts  useCompletions.ts  useDatabaseSync.test.ts  useDatabaseSync.ts  useFilters.test.ts  useFilters.ts  useHackActions.ts  useHacks.ts  useSorting.test.ts  useSorting.ts
src/layouts/: RootLayout.tsx
src/lib/: utils.test.ts
src/test/: example.test.ts
(+4 files in other folders)
