[package]
name = "rom-hack-manager"
version = "0.1.0"
description = "ROM Hack Manager - A desktop application for managing Super Mario World ROM hacks"
authors = ["SiliconFish"]
edition = "2021"
license = "MIT"
default-run = "rom-hack-manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.37.0", features = ["bundled"] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"
md5 = "0.8.0"
crc32fast = "1.5.0"
reqwest = { version = "0.12.28", features = ["json"] }
flips = "0.2.1"
zip = "7.0.0"
tauri-plugin-dialog = "2.4.2"
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
simplelog = "0.12"

[dev-dependencies]
mockall = "0.14.0"
tempfile = "3.24.0"
wiremock = "0.6.5"

